Tue Dec 16 05:41:46 2014  Eric Wong  <e@80x24.org>

	* tool/vcs.rb: fix Ruby 1.8 compatibility

Mon Dec 15 17:51:28 2014  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c: ObjectSpace.memsize_of(obj) returns
	  with sizeof(RVALUE). [Bug #8984]

	* gc.c (obj_memsize_of): ditto.

	* NEWS: add a NEWS entry.

	* test/objspace/test_objspace.rb: catch up this fix.

	* test/ruby/test_file_exhaustive.rb: ditto.

Mon Dec 15 16:19:23 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_enc_str_coderange): dummy wchar, non-endianness
	  encoding string cannot be ascii only.
	  [ruby-core:66835] [Bug #10598]

Sun Dec 14 20:11:42 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): restore current_arg so that circular
	  reference after a method definition is also warned.
	  [ruby-core:61299] [Bug #9593]

Sat Dec 13 20:41:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_trace.c (rb_postponed_job_flush): mask signal trap interrupt
	  too to defer handling after finalizers finished.
	  [ruby-core:66825] [Bug #10595]

Sat Dec 13 18:33:25 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_pkey_ec.rb: ignored tests with old OpenSSL.

Sat Dec 13 18:01:57 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (check_stack_overflow): check sp also on i386/x86_64
	  FreeBSD.

Sat Dec 13 09:58:41 2014  Eric Wong  <e@80x24.org>

	* gc.c (define_final0): avoid duplicate blocks
	  [Bug #10537]
	* test/test_weakref.rb (test_repeated_object_leak): new test

Sat Dec 13 04:59:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bin/erb (ERB::Main#run): get rid of shadowing outer local
	  variables.  [ruby-core:65772] [Feature #10395]

Fri Dec 12 21:56:44 2014  Kouhei Sutou  <kou@cozmixng.org>

	* gems/bundled_gems: Upgrade to test-unit 3.0.8. assert_throw and
	  assert_nothing_thrown in test-unit 3.0.7 were broken by
	  UncaughtThrowError change introduced in Ruby 2.2.0